GG-268 Generated file splitting.
Generated datafetchers and queries will now be split among many more classes, resulting in more but smaller files.

The goal is to lessen the burden on Java compilers by reducing memory usage.